fixed the bottom svg that threw off the horizontal size of the page in mobile and moved Projects dropdown to leave the twitter icon uncovered.

--- a/index.css
+++ b/index.css
@@ -78,6 +78,7 @@ a:visited {
   background-color: rgba(255, 255, 255, 1);
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  right: 0;
 }
 
 .header-dropdown:hover .drop-content {
@@ -118,7 +119,7 @@ a:visited {
     font-size: 1.5rem;
   }
   .header-dropdown {
-    right: 10%;
+    right: 15%;
   }
 }
 
